--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
 
     <div class="header">
-        <a href="https://trompdev.github.io/FloppyTromp2D/" class="header-btn-left" id="play-btn" style="display: none;">
+        <a href="https://taymcquaya.github.io/GameTest/" class="header-btn-left" id="play-btn" style="display: none;">
             <button class="header-btn">PLAY GAME</button>
         </a>
         <div class="title">
