added message of better experience on desktop

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 </head>
 
 <body>
+    <div class="desktop-experience-msg">
+        Best experience in Desktop version
+    </div>
     <!-- <div class="ca-banner">
       
         <div class="ca-text">
