added message of better experience on desktop

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <div class="desktop-experience-msg">
-        Best experience in Desktop version
+        Best experience on Desktop version!
     </div>
     <!-- <div class="ca-banner">
       
