added demo button

--- a/index.html
+++ b/index.html
@@ -177,8 +177,13 @@
                     <button class="play-game" onclick="handleMainPlayClick()">CONNECT WALLET</button>
                 </div>
                 <div class="button-container">
+                    <a href="https://trompdev.github.io/FloppyTromp2D-Demo/">
+                        <button class="play-game">TRY FREE DEMO</button>
+                    </a>
+                </div>
+                <div class="button-container">
                     <a href="https://pump.fun/coin/BJFgXSEVhqxqceUbppNJVRV6BkshTvjrwSkHCjKZpump">
-                    <button class="play-game buy-tromp">BUY $TROMP</button>
+                        <button class="play-game buy-tromp">BUY $TROMP</button>
                     </a>
                 </div>
                 
