--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <!-- Fixed Wallet Controls -->
     <div id="fixed-wallet-overlay">
         <button id="connect-wallet" class="header-btn" onclick="handleWalletClick()">Connect Wallet</button>
+        <!--<a href="https://taymcquaya.github.io/GameTest/" class="header-btn-left" id="play-btn" style="display: none;"></a>-->
         <a href="https://trompdev.github.io/FloppyTromp2D/" class="header-btn-left" id="play-btn" style="display: none;">
             <button class="header-btn">PLAY GAME</button>
         </a>
